Fix the alignment of count/time.

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -502,10 +502,10 @@ body.main-menu #count-time-wrapper-wrapper {
 
 #count-time-wrapper-wrapper {
   position: absolute;
-  bottom: 0;
+  bottom: -5px;
   left: 0;
   right: 0;
-  height: 75px;
+  height: 80px;
 
   display: none;
 
@@ -533,6 +533,7 @@ body.main-menu #count-time-wrapper-wrapper {
 
   top: -5px;
   padding: 10px 20px;
+  padding-bottom: 15px;
   z-index: 1000;
   text-align: center;
 
